--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         # If you had a requirements.txt, you'd run:
-        # pip install -r requirements.txt
+        pip install -r requirements.txt
 
     - name: Run Application
       run: python main.py
