--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,20 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:  # lets you run it manually too
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write   # REQUIRED so the workflow can push changes
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0   # ensures full history so commits work
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -22,8 +28,20 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # If you had a requirements.txt, you'd run:
         pip install -r requirements.txt
 
     - name: Run Application
       run: python main.py
+
+    - name: Commit and push updated CSV
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+
+        if git diff --quiet; then
+          echo "No changes to commit"
+        else
+          git add data.csv
+          git commit -m "Update data.csv"
+          git push
+        fi
